--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <p>Director of Design for Include, a non-profit organization at UC Davis
             that helps design webpages for companies in the Davis and
             Sacramento area.</p>
+
+          <a href = "/cal-hacks">Learn More</a>
+
         </div>
       </div>
 
@@ -74,6 +77,10 @@
           <p>Intern for <a href = "https://hackclub.com/">Hack Club</a> a
             non-profit organization in San Francisco that helps students world
             wide start afternoon coding clubs.</p>
+
+
+          <a href = "/cal-hacks">Learn More</a>
+
         </div>
       </div>
 
