--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Matthew Kwong | Home</title>
 </head>
 
-<body id = "fade">
+<body>
 
     <div class = "text-wrapper">
     <!-- Name -->
@@ -158,6 +158,6 @@
 
 
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
