make more mobile friendly fonts

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
     <div class = "project">
-      <img src = "img/IMG_0411.JPG" alt = "bg">
+      <img src = "img/spotify.png" alt = "bg">
       <div class = "project-description">
         <h3 class = "project-name">Spotify Rooms</h3>
 
@@ -110,7 +110,7 @@
 
 
     <div class = "project">
-      <img src = "img/IMG_0411.JPG" alt = "bg">
+      <img src = "img/helpthehomies.jpg" alt = "bg">
       <div class = "project-description">
         <h3 class = "project-name">Help the Homies</h3>
 
@@ -125,9 +125,9 @@
     </div>
 
     <div class = "project">
-      <img src = "img/IMG_0411.JPG" alt = "bg">
+      <img src = "img/spotify.png" alt = "bg">
       <div class = "project-description">
-        <h3 class = "project-name">Graphic Design Portfolio</h3>
+        <h3 class = "project-name">Graphic Design</h3>
 
         <div class = "project-position">
         </div>
@@ -140,14 +140,14 @@
 
 
     <div class = "project">
-      <img src = "img/IMG_0411.JPG" alt = "bg">
+      <img src = "img/spotify.png" alt = "bg">
       <div class = "project-description">
         <h3 class = "project-name">Course Work </h3>
 
         <div class = "project-position">
         </div>
-        <p>Portfolio showcasing the work I've made in Design 117: Interactive Media 1
-          and Design 112: UI/UX Principles at the University of California Davis.</p>
+        <p>Portfolio showcasing the work I've made in Design 117: Interactive Media 1,
+          Design 16: Graphic Design, Design 112: UI/UX Principles at the University of California Davis.</p>
 
         <a href = "/cal-hacks">Learn More</a>
       </div>
