add images for hackc l club and include

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
       <div class = "project">
-        <img src = "img/IMG_0411.JPG" alt = "bg">
+        <img src = "img/include.png" alt = "bg">
         <div class = "project-description">
           <h3 class = "project-name">include</h3>
 
@@ -66,7 +66,7 @@
 
 
       <div class = "project">
-        <img src = "img/IMG_0411.JPG" alt = "bg">
+        <img src = "img/hack-club.png" alt = "image of the Hack Club site">
         <div class = "project-description">
           <h3 class = "project-name">Hack Club</h3>
 
@@ -110,7 +110,7 @@
 
 
     <div class = "project">
-      <img src = "img/helpthehomies.jpg" alt = "bg">
+      <img src = "img/homeless.png" alt = "bg">
       <div class = "project-description">
         <h3 class = "project-name">Help the Homies</h3>
 
