--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 <body>
   <nav>
-    <a href = "/about-me">About Me</a>
-    <a href = "#">Contact</a>
+    <a href = "#" id ="active">portfolio</a>
+    <a href = "/about">about</a>
+    <a href = "#">contact</a>
   </nav>
 
 
@@ -29,6 +30,7 @@
     <!-- <h1 class = "name-2">MATTHEW KWONG</h1> -->
 
     <h2 class = "description">Designer + Developer</h2>
+    <p>3rd year UC Davis Design student interested in UI/UX and front-end web development</p>
 
     <a href = "#portfolio">
       <div class = "button">
@@ -66,7 +68,7 @@
             that helps design webpages for companies in the Davis and
             Sacramento area.</p>
 
-          <a href = "/cal-hacks">Learn More</a>
+          <a class = "learn-more" href = "/cal-hacks">Learn More</a>
 
         </div>
       </div>
@@ -87,7 +89,7 @@
             wide start afternoon coding clubs.</p>
 
 
-          <a href = "/cal-hacks">Learn More</a>
+          <a class = "learn-more" href = "/cal-hacks">Learn More</a>
 
         </div>
       </div>
@@ -111,7 +113,7 @@
           added that would enhance the listening experience in group settings on
           the Spotify mobile app.</p>
 
-        <a href = "/spotify-rooms">Learn More</a>
+        <a class = "learn-more" href = "/spotify-rooms">Learn More</a>
       </div>
     </div>
 
@@ -128,7 +130,7 @@
           population. Application was developed in 36 hours at Cal Hacks 5.0, the world's largest
         collegiate hackathon.</p>
 
-        <a href = "/cal-hacks">Learn More</a>
+          <a class = "learn-more" href = "/cal-hacks">Learn More</a>
       </div>
     </div>
 
@@ -142,7 +144,7 @@
         <p>Showcase of the work I've made for college and original sticker designs
           that I've created and turned into an online business selling stickers world wide.</p>
 
-        <a href = "/graphic-design">Learn More</a>
+          <a class = "learn-more" href = "/graphic-design">Learn More</a>
       </div>
     </div>
 
@@ -157,7 +159,7 @@
         <p>Portfolio showcasing the work I've made in Design 117: Interactive Media 1,
           Design 16: Graphic Design, Design 112: UI/UX Principles at the University of California Davis.</p>
 
-        <a href = "/cal-hacks">Learn More</a>
+        <a class = "learn-more" href = "/cal-hacks">Learn More</a>
       </div>
     </div>
   </div>
