--- a/about.html
+++ b/about.html
@@ -7,11 +7,59 @@
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Matthew Kwong | About</title>
+
+
+  <style>
+  body {
+    margin:0;
+    }
+  </style>
+
 </head>
   <body>
+    <nav>
+      <a href = "index.html">portfolio</a>
+      <a href = "#" id ="active">about</a>
+      <a href = "#">contact</a>
+    </nav>
 
-    
+    <div class = "about-me-wrapper">
 
+      <!-- About Me Text -->
+      <div class = "about-me-text">
+        <h1>Hi, I'm Matthew!</h1>
+
+        <p>I'm a Junior at the University of California Davis studying design.</p>
+        <p>This past summer I developed my design portfolio and created my first
+        UI/UX project to familiarize myself with popular design tools and programs
+        being used in the industry. Currently, I'm looking for
+        summer 2020 internship opportunities.</p>
+
+        <p>My focus is on UI/UX and front-end web development and hope to
+        build products that will help every day consumers in their daily lives.</p>
+
+        <p>On my free time, I love building with LEGO or riding my Boosted Board
+        around campus.</p>
+
+       <p>If you'd like to reach me or even meet for boba, email me at: <a href="matkwong@ucdavis.edu">matkwong@ucdavis.edu</a></p>
+
+       <h2>Fun Facts</h2>
+       <ul>
+         <li>I love making sticker designs, and have a <a href = "stickers.matthewkwong.com">shop</a></li>
+         <li>I can do 360° spins down a mountain while snowboarding</li>
+       </ul>
+
+
+      </div>
+
+
+      <!-- Profile picture on the right -->
+      <div class = "about-me-profile">
+        <img src = "img/IMG_0094.JPG" alt = "test" id = "pic">
+      </div>
+
+
+    </div>
 
 
   </body>
