--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +14,7 @@
 <body>
   <nav>
     <a href = "#" id ="active">portfolio</a>
-    <a href = "/about">about</a>
+    <a href = "about.html">about</a>
     <a href = "#">contact</a>
   </nav>
 
@@ -30,7 +29,8 @@
     <!-- <h1 class = "name-2">MATTHEW KWONG</h1> -->
 
     <h2 class = "description">Designer + Developer</h2>
-    <p>3rd year UC Davis Design student interested in UI/UX and front-end web development</p>
+    <p>Hi! I'm Matthew, a UI/UX Designer and Front-End Web Developer </p>
+    <p>Director of Design at <a href = "http://include-davis.herokuapp.com/">Include</a></p>
 
     <a href = "#portfolio">
       <div class = "button">
@@ -49,10 +49,26 @@
 
   <!-- <div class = "bottom"> </div> -->
 
-
-  <h2 class = "experience-header" id = "portfolio">Experience</h2>
+<!--<h2 class = "experience-header" id = "portfolio">Experience</h2> -->
 
     <div class = "experience-wrapper">
+
+      <div class = "project">
+        <img src = "img/lego.jpg" alt = "bg">
+        <div class = "project-description">
+          <h3 class = "project-name">LEGO House Webpage Redesign</h3>
+
+          <div class = "project-position">
+            <p>Design 112: UI/UX Principles</p>
+            <p>September 2019</p>
+          </div>
+          <p class = "project-text">Redesign of the webpage for the <a href = "https://www.legohouse.com">
+            LEGO House</a> museum in Denmark with adults as the target audience.</p>
+
+          <a class = "learn-more" href = "/cal-hacks">Learn More</a>
+
+        </div>
+      </div>
 
 
       <div class = "project">
@@ -64,7 +80,7 @@
             <p>Director of Design</p>
             <p>September 2019 - Current</p>
           </div>
-          <p>Director of Design for Include, a non-profit organization at UC Davis
+          <p class = "project-text">Director of Design for Include, a non-profit organization at UC Davis
             that helps design webpages for companies in the Davis and
             Sacramento area.</p>
 
@@ -74,6 +90,42 @@
       </div>
 
 
+      <div class = "project">
+        <img src = "img/spotify.png" alt = "bg">
+        <div class = "project-description">
+          <h3 class = "project-name">Spotify Rooms</h3>
+
+          <div class = "project-position">
+            <p>First UI/UX Project</p>
+            <p>June - August 2019</p>
+          </div>
+
+          <p class = "project-text">Developed an interactive prototype of a Spotify feature I'd like to be
+            added that would enhance the listening experience in group settings on
+            the Spotify mobile app.</p>
+
+          <a class = "learn-more" href = "/spotify-rooms">Learn More</a>
+        </div>
+      </div>
+
+
+
+      <div class = "project">
+        <img src = "img/homeless.png" alt = "bg">
+        <div class = "project-description">
+          <h3 class = "project-name">Help the Homies</h3>
+
+          <div class = "project-position">
+            <p>Cal Hacks 5.0</p>
+            <p>November 2018</p>
+          </div>
+
+          <p>Developed a community based web application that helps homeless
+            population. Application was developed at Cal Hacks 5.0 in 2018.</p>
+
+            <a class = "learn-more" href = "/cal-hacks">Learn More</a>
+        </div>
+      </div>
 
       <div class = "project">
         <img src = "img/hack-club.png" alt = "image of the Hack Club site">
@@ -84,7 +136,7 @@
             <p>Intern</p>
             <p>2016 - June 2017</p>
           </div>
-          <p>Intern for <a href = "https://hackclub.com/" id = "hack-club">Hack Club</a> a
+          <p class = "project-text">Intern for <a href = "https://hackclub.com/" id = "hack-club">Hack Club</a> a
             non-profit organization in San Francisco that helps students world
             wide start afternoon coding clubs.</p>
 
@@ -94,74 +146,32 @@
         </div>
       </div>
 
+
+      <div class = "project">
+        <img src = "img/spotify.png" alt = "bg">
+        <div class = "project-description">
+          <h3 class = "project-name">Graphic Design</h3>
+
+          <div class = "project-position">
+            <p>Portfolio</p>
+            <p>June 2017 - Current</p>
+          </div>
+          <p class = "project-text">Showcase of the work I've made for college and original sticker designs
+            that I've created and turned into an online business selling stickers world wide.</p>
+
+            <a class = "learn-more" href = "/graphic-design">Learn More</a>
+        </div>
+      </div>
+
     </div>
 
 
-  <h2 class = "projects-header">Projects</h2>
+  <!-- <h2 class = "projects-header">Projects</h2> -->
 
   <div class = "project-wrapper">
 
 
-    <div class = "project">
-      <img src = "img/spotify.png" alt = "bg">
-      <div class = "project-description">
-        <h3 class = "project-name">Spotify Rooms</h3>
 
-        <div class = "project-position">
-        </div>
-        <p>Developed an interactive prototype of a Spotify feature I'd like to be
-          added that would enhance the listening experience in group settings on
-          the Spotify mobile app.</p>
-
-        <a class = "learn-more" href = "/spotify-rooms">Learn More</a>
-      </div>
-    </div>
-
-
-
-    <div class = "project">
-      <img src = "img/homeless.png" alt = "bg">
-      <div class = "project-description">
-        <h3 class = "project-name">Help the Homies</h3>
-
-        <div class = "project-position">
-        </div>
-        <p>Developed a community based web application that helps homeless
-          population. Application was developed in 36 hours at Cal Hacks 5.0, the world's largest
-        collegiate hackathon.</p>
-
-          <a class = "learn-more" href = "/cal-hacks">Learn More</a>
-      </div>
-    </div>
-
-    <div class = "project">
-      <img src = "img/spotify.png" alt = "bg">
-      <div class = "project-description">
-        <h3 class = "project-name">Graphic Design</h3>
-
-        <div class = "project-position">
-        </div>
-        <p>Showcase of the work I've made for college and original sticker designs
-          that I've created and turned into an online business selling stickers world wide.</p>
-
-          <a class = "learn-more" href = "/graphic-design">Learn More</a>
-      </div>
-    </div>
-
-
-    <div class = "project">
-      <img src = "img/spotify.png" alt = "bg">
-      <div class = "project-description">
-        <h3 class = "project-name">Course Work </h3>
-
-        <div class = "project-position">
-        </div>
-        <p>Portfolio showcasing the work I've made in Design 117: Interactive Media 1,
-          Design 16: Graphic Design, Design 112: UI/UX Principles at the University of California Davis.</p>
-
-        <a class = "learn-more" href = "/cal-hacks">Learn More</a>
-      </div>
-    </div>
   </div>
 
 
