more responsive site + add more to  about me

--- a/about.html
+++ b/about.html
@@ -13,6 +13,10 @@
   body {
     margin:0;
     }
+
+  a{
+    color: #2698EC;
+  }
   </style>
 
 </head>
@@ -24,6 +28,12 @@
     </nav>
 
     <div class = "about-me-wrapper">
+
+      <!-- Profile picture on the right -->
+      <div class = "about-me-profile">
+        <img src = "img/IMG_0094.JPG" alt = "test" id = "pic">
+      </div>
+
 
       <!-- About Me Text -->
       <div class = "about-me-text">
@@ -45,18 +55,12 @@
 
        <h2>Fun Facts</h2>
        <ul>
-         <li>I love making sticker designs, and have a <a href = "stickers.matthewkwong.com">shop</a></li>
+         <li>I love making sticker designs, and have a <a href = "https://docs.google.com/forms/d/e/1FAIpQLSezZme9sC37I12b1i4KFmJjJFCtcgXO2a0z1flZkIKTxT1M6w/viewform?usp=sf_link/">shop</a></li>
          <li>I can do 360° spins down a mountain while snowboarding</li>
        </ul>
-
-
       </div>
 
 
-      <!-- Profile picture on the right -->
-      <div class = "about-me-profile">
-        <img src = "img/IMG_0094.JPG" alt = "test" id = "pic">
-      </div>
 
 
     </div>
