--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class = "project">
         <img src = "img/lego.jpg" alt = "bg">
         <div class = "project-description">
-          <h3 class = "project-name">LEGO House Webpage Redesign</h3>
+          <h3 class = "project-name">LEGO House Redesign</h3>
 
           <div class = "project-position">
             <p>Design 112: UI/UX Principles</p>
@@ -167,12 +167,6 @@
 
 
   <!-- <h2 class = "projects-header">Projects</h2> -->
-
-  <div class = "project-wrapper">
-
-
-
-  </div>
 
 
 
