add logo + Js animations

--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@
 </head>
   <body>
     <nav>
+      <img src = "img/logo.png" height =  "40" alt = "logo" class = "logo">
+      <!-- <a class = "logo">Matthew Kwong</a> -->
       <a href = "index.html">portfolio</a>
       <a href = "#" id ="active">about</a>
       <a href = "#">contact</a>
@@ -39,25 +41,32 @@
       <div class = "about-me-text">
         <h1>Hi, I'm Matthew!</h1>
 
-        <p>I'm a Junior at the University of California Davis studying design.</p>
+        <p>I'm a Junior at the University of California Davis studying Design.</p>
         <p>This past summer I developed my design portfolio and created my first
         UI/UX project to familiarize myself with popular design tools and programs
         being used in the industry. Currently, I'm looking for
         summer 2020 internship opportunities.</p>
 
-        <p>My focus is on UI/UX and front-end web development and hope to
-        build products that will help every day consumers in their daily lives.</p>
+        <p>My design focus is on UI/UX and Front-End Web Development.
+        My goal is to help build products that will help every day consumers with theirr
+        their daily lives.</p>
 
-        <p>On my free time, I love building with LEGO or riding my Boosted Board
+        <p>On my free time, I love building with LEGO and riding my Boosted Board
         around campus.</p>
 
-       <p>If you'd like to reach me or even meet for boba, email me at: <a href="matkwong@ucdavis.edu">matkwong@ucdavis.edu</a></p>
+       <p>If you'd like to reach me or even meet for boba, email me at <a href="matkwong@ucdavis.edu">matkwong@ucdavis.edu</a></p>
 
        <h2>Fun Facts</h2>
        <ul>
          <li>I love making sticker designs, and have a <a href = "https://docs.google.com/forms/d/e/1FAIpQLSezZme9sC37I12b1i4KFmJjJFCtcgXO2a0z1flZkIKTxT1M6w/viewform?usp=sf_link/">shop</a></li>
          <li>I can do 360° spins down a mountain while snowboarding</li>
        </ul>
+
+       <a href = "">
+         <div class = "resume-button">
+           <p>Download My Resume</p>
+         </div>
+       </a>
       </div>
 
 
