add responsive nav

--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
   <meta property="og:image" content="img/preview.png">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+ <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+
   <title>Matthew Kwong | About</title>
 
 
@@ -21,12 +24,41 @@
 
 </head>
   <body>
-    <nav>
-      <img src = "img/logo.png" height =  "40" alt = "logo" class = "logo">
-      <!-- <a class = "logo">Matthew Kwong</a> -->
-      <a href = "index.html">portfolio</a>
-      <a href = "#" id ="active">about</a>
-      <a href = "#">contact</a>
+    <nav id = "navbar">
+      <!-- allows for the navbar to be collapsable in mobile -->
+      <input type="checkbox" id="nav-check">
+
+      <div id="nav-header">
+        <div id="name">
+          <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+        </div>
+      </div>
+
+      <div id="nav-button">
+        <label for="nav-check">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
+
+      <div class="nav-links">
+        <img src = "img/logo-white.png" height =  "10" alt = "logo" class = "logo-white">
+
+        <a href = "index.html" id = "portfolio-tab">portfolio</a>
+        <a href = "about.html" class ="active">about</a>
+        <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
+      </div>
+    </nav>
+
+    <nav class = "back-up">
+      <div class="nav-links">
+        <img src = "img/logo-white.png" height =  "10" alt = "logo" class = "logo-white">
+
+        <a href = "index.html">portfolio</a>
+        <a href = "about.html" class ="active" >about</a>
+        <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
+      </div>
     </nav>
 
     <div class = "about-me-wrapper">
@@ -54,7 +86,8 @@
         <p>On my free time, I love building with LEGO and riding my Boosted Board
         around campus.</p>
 
-       <p>If you'd like to reach me or even meet for boba, email me at <a href="matkwong@ucdavis.edu">matkwong@ucdavis.edu</a></p>
+       <p>If you'd like to reach me or even meet for boba, email me at
+         <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">matkwong@ucdavis.edu</a></p>
 
        <h2>Fun Facts</h2>
        <ul>
@@ -74,6 +107,7 @@
 
     </div>
 
+    <script src="script.js"></script>
 
   </body>
 </html>
