--- a/index.html
+++ b/index.html
@@ -14,12 +14,50 @@
 </head>
 
 <body>
-  <nav>
+  <!-- <nav>
     <img src = "img/logo.png" height =  "40" alt = "logo" class = "logo">
-    <!-- <a class = "logo">Matthew Kwong</a> -->
-    <a href = "index.html" id ="active" >portfolio</a>
+    <a class = "logo">Matthew Kwong</a>
+    <a href = "index.html" class ="active" >portfolio</a>
     <a href = "about.html">about</a>
-    <a href = "#">contact</a>
+    <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
+  </nav> -->
+
+
+  <nav id = "navbar">
+    <!-- allows for the navbar to be collapsable in mobile -->
+    <input type="checkbox" id="nav-check">
+
+    <div id="nav-header">
+      <div id="name">
+        <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+      </div>
+    </div>
+
+    <div id="nav-button">
+      <label for="nav-check">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
+
+    <div class="nav-links">
+      <img src = "img/logo-white.png" height =  "10" alt = "logo" class = "logo-white">
+
+      <a href = "index.html" class ="active" id = "portfolio-tab">portfolio</a>
+      <a href = "about.html">about</a>
+      <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
+    </div>
+  </nav>
+
+  <nav class = "back-up">
+    <div class="nav-links">
+      <img src = "img/logo-white.png" height =  "10" alt = "logo" class = "logo-white">
+
+      <a href = "index.html" class ="active" >portfolio</a>
+      <a href = "about.html">about</a>
+      <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
+    </div>
   </nav>
 
 
@@ -69,7 +107,7 @@
           <p class = "project-text">Redesign of the webpage for the <a href = "https://www.legohouse.com">
             LEGO House</a> museum in Denmark with adults as the target audience.</p>
 
-          <a class = "learn-more" href = "/cal-hacks">Learn More</a>
+          <a class = "learn-more" href = "lego-house.html">Learn More</a>
 
         </div>
       </div>
@@ -88,7 +126,7 @@
             that helps design webpages for companies in the Davis and
             Sacramento area.</p>
 
-          <a class = "learn-more" href = "/cal-hacks">Learn More</a>
+          <a class = "learn-more" href = "include.html">Learn More</a>
 
         </div>
       </div>
@@ -108,7 +146,7 @@
             added that would enhance the listening experience in group settings on
             the Spotify mobile app.</p>
 
-          <a class = "learn-more" href = "/spotify-rooms">Learn More</a>
+          <a class = "learn-more" href = "spotify-rooms-process.html">Learn More</a>
         </div>
       </div>
 
@@ -127,7 +165,7 @@
           <p>Developed a community based web application that helps homeless
             population. Application was developed at Cal Hacks 5.0 in 2018.</p>
 
-            <a class = "learn-more" href = "/cal-hacks">Learn More</a>
+            <a class = "learn-more" href = "homeless-helper.html">Learn More</a>
         </div>
       </div>
 
@@ -145,7 +183,7 @@
             wide start afternoon coding clubs.</p>
 
 
-          <a class = "learn-more" href = "/cal-hacks">Learn More</a>
+          <a class = "learn-more" href = "hack-club.html">Learn More</a>
 
         </div>
       </div>
@@ -163,7 +201,7 @@
           <p class = "project-text">Showcase of the work I've made for college and original sticker designs
             that I've created and turned into an online business selling stickers world wide.</p>
 
-            <a class = "learn-more" href = "/graphic-design">Learn More</a>
+            <a class = "learn-more" href = "graphic-design.html">Learn More</a>
         </div>
       </div>
 
