new layout for projects :)

--- a/index.html
+++ b/index.html
@@ -84,19 +84,14 @@
   <!-- Profile + background -->
 
   <div class = "profile"></div>
-  <!-- <img src="img/IMG_0094.JPG" class = "me">
-  <img src="img/IMG_0411.JPG" class = "background"> -->
-
-  <div class = "background"> </div>
-
-  <!-- <div class = "bottom"> </div> -->
-
-<!--<h2 class = "experience-header" id = "portfolio">Experience</h2> -->
+  <div class = "background"></div>
 
     <div class = "experience-wrapper" id = "portfolio">
 
-      <div class = "project">
+      <!-- <div class = "project">
         <img src = "img/lego.jpg" alt = "Lego" class = "project-img">
+
+
         <div class = "project-description">
           <h3 class = "project-name">LEGO House Redesign</h3>
 
@@ -104,19 +99,27 @@
             <p>Design 112: UI/UX Principles</p>
             <p>September 2019</p>
           </div>
+
+
           <p class = "project-text">Redesign of the webpage for the <a href = "https://www.legohouse.com">
             LEGO House</a> museum in Denmark with adults as the target audience.</p>
 
-          <a class = "learn-more" href = "lego-house.html">Learn More</a>
 
+          <a href = "lego-house.html">
+            <div class = "learn-more">
+              <p>Learn More</p>
+            </div>
+          </a>
         </div>
-      </div>
+      </div> -->
 
 
-      <div class = "project">
+      <div class = "project project-reverse">
         <img src = "img/include.png" alt = "bg" class = "project-img">
+
+
         <div class = "project-description">
-          <h3 class = "project-name">include</h3>
+          <h3 class = "project-name" id = "include-title">#include</h3>
 
           <div class = "project-position">
             <p>Director of Design</p>
@@ -125,9 +128,11 @@
           <p class = "project-text">Director of Design for Include, a non-profit organization at UC Davis
             that helps design webpages for companies in the Davis and
             Sacramento area.</p>
-
-          <a class = "learn-more" href = "include.html">Learn More</a>
-
+            <a href = "include.html">
+              <div class = "learn-more" id = "include">
+                <p>Learn More</p>
+              </div>
+            </a>
         </div>
       </div>
 
@@ -135,7 +140,7 @@
       <div class = "project">
         <img src = "img/spotify.png" alt = "Spotify Rooms" class = "project-img">
         <div class = "project-description">
-          <h3 class = "project-name">Spotify Rooms</h3>
+          <h3 class = "project-name" id = "spotify-title">Spotify Rooms</h3>
 
           <div class = "project-position">
             <p>First UI/UX Project</p>
@@ -146,13 +151,18 @@
             added that would enhance the listening experience in group settings on
             the Spotify mobile app.</p>
 
-          <a class = "learn-more" href = "spotify-rooms-process.html">Learn More</a>
+            <a href = "spotify-rooms-process.html">
+              <div class = "learn-more" id = "spotify">
+                <p>Learn More</p>
+              </div>
+            </a>
+
         </div>
       </div>
 
 
 
-      <div class = "project">
+      <div class = "project project-reverse">
         <img src = "img/homeless.png" alt = "Help the Homies" class = "project-img">
         <div class = "project-description">
           <h3 class = "project-name">Help the Homies</h3>
@@ -165,31 +175,38 @@
           <p>Developed a community based web application that helps homeless
             population. Application was developed at Cal Hacks 5.0 in 2018.</p>
 
-            <a class = "learn-more" href = "homeless-helper.html">Learn More</a>
-        </div>
+            <a href = "homeless-helper.html">
+              <div class = "learn-more">
+                <p>Learn More</p>
+              </div>
+            </a>
+          </div>
       </div>
 
       <div class = "project">
         <img src = "img/hack-club.png" alt = "image of the Hack Club site" class = "project-img">
         <div class = "project-description">
-          <h3 class = "project-name">Hack Club</h3>
+          <h3 class = "project-name" id = "hack-club-title">Hack Club</h3>
 
           <div class = "project-position">
             <p>Intern</p>
             <p>2016 - June 2017</p>
           </div>
-          <p class = "project-text">Intern for <a href = "https://hackclub.com/" id = "hack-club">Hack Club</a> a
+          <p class = "project-text">Intern for <a href = "https://hackclub.com/">Hack Club</a> a
             non-profit organization in San Francisco that helps students world
             wide start afternoon coding clubs.</p>
 
 
-          <a class = "learn-more" href = "hack-club.html">Learn More</a>
-
+            <a href = "hack-club.html">
+              <div class = "learn-more" id = "hack-club">
+                <p>Learn More</p>
+              </div>
+            </a>
         </div>
       </div>
 
 
-      <div class = "project">
+      <div class = "project project-reverse">
         <img src = "img/spotify.png" alt = "Spotify Rooms" class = "project-img">
         <div class = "project-description">
           <h3 class = "project-name">Graphic Design</h3>
@@ -201,8 +218,11 @@
           <p class = "project-text">Showcase of the work I've made for college and original sticker designs
             that I've created and turned into an online business selling stickers world wide.</p>
 
-            <a class = "learn-more" href = "graphic-design.html">Learn More</a>
-        </div>
+            <a href = "graphic-design.html">
+              <div class = "learn-more">
+                <p>Learn More</p>
+              </div>
+            </a>        </div>
       </div>
 
     </div>
