--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
          <li>I can do 360° spins down a mountain while snowboarding</li>
        </ul>
 
-       <a href = "">
+       <a target=”_blank”  href = "https://drive.google.com/file/d/1Ooe46mwfHeR1qxKAfKZ0x0YkQt6mAwKY/view?usp=sharing">
          <div class = "resume-button">
            <p>Download My Resume</p>
          </div>
