fix their spelling

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         summer 2020 internship opportunities.</p>
 
         <p>My design focus is on UI/UX and Front-End Web Development.
-        My goal is to help build products that will help every day consumers with theirr
+        My goal is to help build products that will help every day consumers with 
         their daily lives.</p>
 
         <p>On my free time, I love building with LEGO and riding my Boosted Board
