--- a/include.html
+++ b/include.html
@@ -1,7 +1,125 @@
-<p>Include is a non-profit organization that helps design webpages
-  for companies in the Davis and Sacramento area. As Head of Design
-  my responsibilities include: supervising the design team on website
-  layout for various non-profit organization clients. I have also
-managed and lead designs </p>
 
-          <a href = "http://include-davis.herokuapp.com/"></a>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:image" content="img/preview.png">
+  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+ <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+
+  <title>Matthew Kwong | About</title>
+
+
+  <style>
+  body {
+    margin:0;
+    }
+
+  a{
+    color: #2698EC;
+  }
+  </style>
+
+</head>
+  <body>
+    <nav id = "navbar">
+      <!-- allows for the navbar to be collapsable in mobile -->
+      <input type="checkbox" id="nav-check">
+
+      <div id="nav-header">
+        <div id="name">
+          <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+        </div>
+      </div>
+
+      <div id="nav-button">
+        <label for="nav-check">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
+
+      <div class="nav-links">
+        <img src = "img/logo-white.png" height =  "10" alt = "logo" class = "logo-white">
+
+        <a href = "index.html" class ="active" id = "portfolio-tab">portfolio</a>
+        <a href = "about.html">about</a>
+        <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
+      </div>
+    </nav>
+
+<!-- Duplicate navbar to solve disappearing nav bar on media queries -->
+    <nav class = "back-up">
+      <div class="nav-links">
+        <img src = "img/logo-white.png" height =  "10" alt = "logo" class = "logo-white">
+
+        <a href = "index.html"  class ="active">portfolio</a>
+        <a href = "about.html" >about</a>
+        <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
+      </div>
+    </nav>
+
+    <div class = "project-banner">
+      <!-- <img src = "img/include.png"> -->
+    </div>
+
+    <div class = "project-heading">
+      <h1 id = "include-page">Include</h1>
+      <h2>Director of Design</h2>
+      <h3>September 2019 - Current</h3>
+    </div>
+
+    <div class = "project-body-text">
+      <h2 class = "project-subtitle">Background</h2>
+      <p class = "project-text">
+      Currently, I am the Director of Design for Include, a non-profit
+      organization at the University of California Davis that helps build
+       websites for local businesses in the area.
+      </p>
+
+      <h2 class = "project-subtitle">Summary</h2>
+      <p>Through this position I’ve learned and improved many skills such as
+       leadership, teamwork, communication, organization, and decision making.
+
+       My responsiblities include: leading the design team, creating lesson plans,
+       creating advertisements, and leading lessons on wireframing and UI/UX.
+     </p>
+
+      <p> At the start of the 2019 school year, I created and lead workshops on
+         wireframing and user interface and user experience. This was a chance for
+          me to improve my skills as an instructor and leader as it was the first time many
+          students had used some of the design tools.</p>
+
+      <p>As a club that builds websites for other non-profit organizations, I’ve met
+        with clients and learned to communicate my ideas in a professional matter.
+      After meeting with our clients, I supervised our design team on concept creation,
+      strategy and user experience.</p>
+
+      <p>Most importantly, I have provided mentorship and direction to team
+        members in creative execution and planning. Through this, I’ve been able
+         to develop a closer relationship with my team and has taught me to be
+         a better teacher.</p>
+
+    </div>
+
+    <div class = "image">
+      <img src = "img/include-presentation.jpg" alt = "include presentation" width = "500">
+      <p>10/10/19 - Presentation on wireframing and working with Figma</p>
+    </div>
+
+    <footer>
+      <div id = "icons">
+        <a href = "https://www.instagram.com/kwongenterprises" target="_blank"><img src = "img/footer/instagram.svg" alt = "instagram icon"></a>
+        <a href= "https://www.github.com/matthewkwong" target="_blank"> <img src = "img/footer/github.svg" alt = "github icon"></a>
+        <a href = "https://www.linkedin.com/in/matthewrkwong/" target="_blank"><img src = "img/footer/linkedin.svg" alt = "linkedin icon"></a>
+        <a href= "mailto:&#109;&#097;&#116;&#116;&#104;&#101;&#119;&#114;&#107;&#119;&#111;&#110;&#103;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" target="_blank"> <img src = "img/footer/envelope.svg" alt = "mail icon"></a>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
+</html>
