add Hack Club, Homeless Helper, and Include sites

--- a/include.html
+++ b/include.html
@@ -18,9 +18,6 @@
     margin:0;
     }
 
-  a{
-    color: #2698EC;
-  }
   </style>
 
 </head>
@@ -63,7 +60,7 @@
       </div>
     </nav>
 
-    <div class = "project-banner">
+    <div class = "project-banner include-banner">
       <!-- <img src = "img/include.png"> -->
     </div>
 
