--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
     <!-- allows for the navbar to be collapsable in mobile -->
     <input type="checkbox" id="nav-check">
 
-    <div id="nav-header">
-      <div id="name">
-        <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
-      </div>
-    </div>
-
+    <a href = "index.html">
+      <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+    </a>
     <div id="nav-button">
       <label for="nav-check">
         <span></span>
@@ -163,7 +160,7 @@
 
 
       <div class = "project project-reverse">
-        <img src = "img/homeless.png" alt = "Help the Homies" class = "project-img">
+        <img src = "img/homeless.jpg" alt = "Help the Homies" class = "project-img">
         <div class = "project-description">
           <h3 class = "project-name">Help the Homies</h3>
 
@@ -175,7 +172,7 @@
           <p>Developed a community based web application that helps homeless
             population. Application was developed at Cal Hacks 5.0 in 2018.</p>
 
-            <a href = "homeless-helper.html">
+            <a href = "homeless.html">
               <div class = "learn-more">
                 <p>Learn More</p>
               </div>
@@ -184,7 +181,7 @@
       </div>
 
       <div class = "project">
-        <img src = "img/hack-club.png" alt = "image of the Hack Club site" class = "project-img">
+        <img src = "img/hack-club.jpg" alt = "image of the Hack Club site" class = "project-img">
         <div class = "project-description">
           <h3 class = "project-name" id = "hack-club-title">Hack Club</h3>
 
