--- a/about.html
+++ b/about.html
@@ -28,12 +28,9 @@
       <!-- allows for the navbar to be collapsable in mobile -->
       <input type="checkbox" id="nav-check">
 
-      <div id="nav-header">
-        <div id="name">
-          <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
-        </div>
-      </div>
-
+      <a href = "index.html">
+        <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+      </a>
       <div id="nav-button">
         <label for="nav-check">
           <span></span>
@@ -45,8 +42,8 @@
       <div class="nav-links">
         <img src = "img/logo-white.png" height =  "10" alt = "logo" class = "logo-white">
 
-        <a href = "index.html" id = "portfolio-tab">portfolio</a>
-        <a href = "about.html" class ="active">about</a>
+        <a href = "index.html" class ="active" id = "portfolio-tab">portfolio</a>
+        <a href = "about.html">about</a>
         <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
       </div>
     </nav>
@@ -65,7 +62,7 @@
 
       <!-- Profile picture on the right -->
       <div class = "about-me-profile">
-        <img src = "img/IMG_0094.JPG" alt = "test" id = "pic">
+        <img src = "img/profile-picture.JPG" alt = "Profile picture of me :)" id = "pic">
       </div>
 
 
@@ -80,7 +77,7 @@
         summer 2020 internship opportunities.</p>
 
         <p>My design focus is on UI/UX and Front-End Web Development.
-        My goal is to help build products that will help every day consumers with 
+        My goal is to help build products that will help every day consumers with
         their daily lives.</p>
 
         <p>On my free time, I love building with LEGO and riding my Boosted Board
