--- a/hack-club.html
+++ b/hack-club.html
@@ -126,7 +126,7 @@
 
     <div class = "image">
       <img src = "img/stickers.gif" alt = "include presentation" width = "500">
-      <p>Hack Club promotion stickers!</p>
+      <p>Promotion Hack Club stickers!</p>
     </div>
 
     <footer>
