--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
   <title>Matthew Kwong | Home</title>
+
+
+  <style>
+  h3{
+    line-height: 0;
+  }
+  </style>
 </head>
 
 <body>
