fix line heights for mobile and image on about page

--- a/hack-club.html
+++ b/hack-club.html
@@ -17,7 +17,6 @@
   body {
     margin:0;
     }
-
   </style>
 
 </head>
@@ -28,7 +27,9 @@
 
       <div id="nav-header">
         <div id="name">
-          <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+          <a href = "index.html">
+            <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+          </a>
         </div>
       </div>
 
@@ -126,7 +127,7 @@
 
     <div class = "image">
       <img src = "img/stickers.gif" alt = "include presentation" width = "500">
-      <p>Promotion Hack Club stickers!</p>
+      <p>Promotional Hack Club stickers!</p>
     </div>
 
     <footer>
