--- a/homeless.html
+++ b/homeless.html
@@ -28,7 +28,9 @@
 
       <div id="nav-header">
         <div id="name">
-          <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+          <a href = "index.html">
+            <img src = "img/logo.png" height =  "10" alt = "logo" class = "logo">
+          </a>
         </div>
       </div>
 
