finish Spotify Rooms page

--- a/include.html
+++ b/include.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
-  <title>Matthew Kwong | About</title>
+  <title>Matthew Kwong | Include</title>
 
 
   <style>
@@ -75,21 +75,20 @@
     <div class = "project-body-text">
       <h2 class = "project-subtitle">Background</h2>
       <p class = "project-text">
-      Currently, I am the Director of Design for Include, a non-profit
+      For the 2019 - 2020 school year, I am the Director of Design for Include, a non-profit
       organization at the University of California Davis that helps build
        websites for local businesses in the area.
       </p>
 
       <h2 class = "project-subtitle">Summary</h2>
-      <p>Through this position I’ve learned and improved many skills such as
-       leadership, teamwork, communication, organization, and decision making.
+      <p>As a director, I’ve learned and improved many skills such as
+       leadership, teamwork, communication, organization, and decision making.</p>
 
-       My responsiblities include: leading the design team, creating lesson plans,
-       creating advertisements, and leading lessons on wireframing and UI/UX.
-     </p>
+      <p>My responsiblities include: leading the design team, creating lesson plans,
+       creating advertisements, and leading lessons on wireframing and UI/UX.</p>
 
       <p> At the start of the 2019 school year, I created and lead workshops on
-         wireframing and user interface and user experience. This was a chance for
+         wireframing and UI/UX. This was a chance for
           me to improve my skills as an instructor and leader as it was the first time many
           students had used some of the design tools.</p>
 
@@ -97,12 +96,6 @@
         with clients and learned to communicate my ideas in a professional matter.
       After meeting with our clients, I supervised our design team on concept creation,
       strategy and user experience.</p>
-
-      <p>Most importantly, I have provided mentorship and direction to team
-        members in creative execution and planning. Through this, I’ve been able
-         to develop a closer relationship with my team and has taught me to be
-         a better teacher.</p>
-
     </div>
 
     <div class = "image">
