--- a/hack-club.html
+++ b/hack-club.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
-  <title>Matthew Kwong | About</title>
+  <title>Matthew Kwong | Hack Club</title>
 
 
   <style>
@@ -74,55 +74,52 @@
     <div class = "project-body-text">
       <h2 class = "project-subtitle">Background</h2>
       <p class = "project-text">
-      Throughout my senior year of high school I was interned at a local
+      Throughout my senior year of high school I interned at a local
       non-profit in San Francisco that helped start after school coding clubs
-      called Hack Club. Through this internship I helped develop an online
+      called Hack Club. Throughout my internship I helped develop an online
       curriculum to teach web development, managed promotional campaigns,
-      operated an outreach program, and prepared welcome packages to new members.
+      operated an outreach program, and prepared welcome packages for new
+      members who joined our organization.
       </p>
 
 
       <h2 class = "project-subtitle">Projects</h2>
       <h3 class = "project-sub-subtitle">Curriculum Redesign</h3>
 
-      <p>At Hack Club, they provide high school students with an online curriculum
-         to teach HTML, CSS, and JavaScript. Part of my job was to go through
-         existing workshops in the curriculum and redesign them to be clear and
-         concise at a high school level.
+      <p>One of my first tasks as an intern at Hack Club was to revise the
+         online curriculum that taught students HTML, CSS, and JavaScript.
+         This involved going through the existing workshops and redesigning them
+         to be understand at a high school level.
      </p>
 
      <h3 class = "project-subtitle">Social Media Outreach</h3>
       <p>
-        I also led a promotional social media campaign on Facebook where I
+        Additionally, I led a promotional social media campaign on Facebook where I
         learned to use Facebook advertising, creating content to promote the
         company’s presence. Through this experience I was able to learn more about
          advertising processes and what target platforms we should focus on.
       </p>
 
       <h3 class = "project-subtitle">Email Outreach</h3>
-      <p>Through my entire time at Hack Club, I operated an outreach program
+      <p>Throughout my entire time at Hack Club, I operated an outreach program
         where we were able to advertise and contact over 15,000 high schools
-        in the United States</p>
+        in the United States.</p>
 
       <h3 class = "project-subtitle">Sticker Welcome Packages</h3>
       <p>As part of the onboarding process I helped package and send onboarding
         packages of Hack Club stickers given to each new branch
-        joining the organization</p>
+        joining the organization.</p>
 
       <h2 class = "project-subtitle">Takeaways</h2>
-      <p>This experience changed my life in many ways.
-        I learned professional workplace skills that improved the way
-        I worked in teams. I learned more about start-up culture and the difficulties
-         faced on a day to day basis. I learned how to work in professional teams.</p>
+      <p>This experience changed my life in many ways as I learned professional
+        workplace skills in responsiblity and teamwork.</p>
 
-      <p>A great part of Hack Club is the online Slack channel, where students
-        across the world are able to communicate with one another. To see the
-        community develop to where it is today is unbelievable. Today, I see
-        students that I had personally reached out to change the way Hack Club
-        is run. To have the feeling that I was able to help change the lives of
-        students world wide is something I can’t put into words. I’m so grateful
-         for the time I was able to spend at Hack Club and thrilled that I was
-         able to make a positive impact on others lives.</p>
+      <p>A great part of Hack Club is the online Slack channel where students
+        across the world are able to communicate with one another. Since leaving
+        my internship at Hack Club, I have seen students that I had personally
+        reached out to to join Hack Club, positively impact how the organization
+        runs. I’m so grateful for the time I was able to spend at Hack Club
+        and thrilled that I was able to make a positive impact on others lives.</p>
     </div>
 
     <div class = "image">
