--- a/homeless.html
+++ b/homeless.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
-  <title>Matthew Kwong | About</title>
+  <title>Matthew Kwong | Help the Homies</title>
 
 
   <style>
