add graphic design page

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
       <div class = "project project-reverse">
-        <img src = "img/spotify.png" alt = "Spotify Rooms" class = "project-img">
+        <img src = "img/design-banner.jpg" alt = "Graphic Design" class = "project-img">
         <div class = "project-description">
           <h3 class = "project-name">Graphic Design</h3>
 
@@ -226,7 +226,8 @@
               <div class = "learn-more">
                 <p>Learn More</p>
               </div>
-            </a>        </div>
+            </a>
+        </div>
       </div>
 
     </div>
