update footer email

--- a/index.html
+++ b/index.html
@@ -232,17 +232,12 @@
 
     </div>
 
-
-  <!-- <h2 class = "projects-header">Projects</h2> -->
-
-
-
   <footer>
     <div id = "icons">
       <a href = "https://www.instagram.com/kwongenterprises" target="_blank"><img src = "img/footer/instagram.svg" alt = "instagram icon"></a>
       <a href= "https://www.github.com/matthewkwong" target="_blank"> <img src = "img/footer/github.svg" alt = "github icon"></a>
       <a href = "https://www.linkedin.com/in/matthewrkwong/" target="_blank"><img src = "img/footer/linkedin.svg" alt = "linkedin icon"></a>
-      <a href= "mailto:&#109;&#097;&#116;&#116;&#104;&#101;&#119;&#114;&#107;&#119;&#111;&#110;&#103;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" target="_blank"> <img src = "img/footer/envelope.svg" alt = "mail icon"></a>
+      <a href="mailto:&#109;&#097;&#116;&#107;&#119;&#111;&#110;&#103;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">contact</a>
     </div>
   </footer>
 
